# aimerge

./: CMakeLists.txt
assets/: chatbot-client-qt.desktop  chatbot-client-qt.metainfo.xml  chatbot-client.metainfo.xml  com.soufrabi.aimerge.desktop
src/: mainwindow.cpp  mainwindow.ui
